removed twitter from social media

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: Nikunj-Gupta # your GitHub user name
 gitlab_username: # your GitLab user name
-twitter_username: NikunjG35871323 # your Twitter handle
+twitter_username: # your Twitter handle
 linkedin_username: nikunj-gupta97 # your LinkedIn user name
 scholar_userid: https://scholar.google.com/citations?hl=en&user=nargncAAAAAJ # your Google Scholar ID
 orcid_id: 0000-0002-1455-0412 # your ORCID ID
