updated contact note

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 
 contact_note: >
-  The best way to reach me would be to either shoot me an email or connect with me on LinkedIn! :) 
+  The best way to reach me would be to either to shoot me an email or connect with me on LinkedIn! :) 
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
 panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
