added makefile; updated about page, miscellany, some news and layout pages

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ github_username: Nikunj-Gupta # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: NikunjG35871323 # your Twitter handle
 linkedin_username: nikunj-gupta97 # your LinkedIn user name
-scholar_userid: https://scholar.google.com/citations?hl=en&user=nargncAAAAAJ # your Google Scholar ID
+scholar_userid: nargncAAAAAJ # your Google Scholar ID
 orcid_id: 0000-0002-1455-0412 # your ORCID ID
 medium_username: nikunj_gupta # your Medium username
 quora_username: Nikunj-Gupta-28 # your Quora username
@@ -52,7 +52,8 @@ research_gate_profile: Nikunj-Gupta-8 # your profile on ResearchGate
 blogger_url: # your blogger URL
 work_url: # work page URL
 keybase_username: # your keybase user name
-wikidata_id: # your wikidata id
+wikidata_id: # your wikidata id 
+youtube_channel: https://www.youtube.com/channel/UCBVxgqFd5wi24-cdqdRIWrA 
 
 contact_note: >
   The best way to reach me would be to either to shoot me an email or connect with me on LinkedIn! :) 
