--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Nikunj 
 middle_name: 
 last_name: Gupta 
-email: Nikunj.Gupta@iiitb.org 
+email: ng2531@nyu.edu 
 description: # the ">" symbol means to ignore newlines until "footer_text:" 
 footer_text: 
  
